--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/img/header/icon.png">
     <title>ВЕРХНИЙ ДОМ</title>
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="./style/main.css">
 </head>
 
 <body>
@@ -63,50 +64,50 @@
                 </div>
             </div>
         </div>
-        <div class="hero">
-            <img src="/img/hero/slider-home.png" id="slideshow" alt="home1" class="hero__img-home">
-            <img src="img/hero/slider-home2.png" id="slideshow" alt="home1" class="hero__img-home" style="display: none;">
-            <img src="img/hero/slider-home3.png" id="slideshow" alt="home1" class="hero__img-home" style="display: none;">
-            <img src="img/hero/slider-home4.png" id="slideshow" alt="home1" class="hero__img-home" style="display: none;">
-            <img src="img/hero/slider-home5.png" id="slideshow" alt="home1" class="hero__img-home" style="display: none;">
-            <div class="hero__contant">
-                <div class="container">
-                    <div class="hero__information">
-                        <div class="hero__title">
-                            Отдыхайте с нами
-                        </div>
-                        <div class="hero__info">
-                            <div class="hero__offers">
-                                <div class="hero__offer__block">
-                                    <div class="hero__offer">
-                                        <img src="./img/hero/icon1.png" alt="" class="hero__icon">
-                                        <div class="hero__offer-title">Провести время с семьей</div>
-                                    </div>
-                                    <div class="hero__offer">
-                                        <img src="./img/hero/icon3.png" alt="" class="hero__icon">
-                                        <div class="hero__offer-title">Отдых на природе</div>
-                                    </div>
-                                </div>
-                                <div class="hero__line">
-                                </div>
-                                <div class="hero__offer__block">
-                                    <div class="hero__offer">
-                                        <img src="./img/hero/icon2.png" alt="" class="hero__icon">
-                                        <div class="hero__offer-title">Русская баня</div>
-                                    </div>
-                                    <div class="hero__offer">
-                                        <img src="./img/hero/icon4.png" alt="" class="hero__icon">
-                                        <div class="hero__offer-title">Высокоскоростной <span
-                                                class="hero__offer-title_decoration">WI-FI</span></div>
-                                    </div>
-                                </div>
+            <div class="hero">
+                <img src="/img/hero/slider-home.png" id="slideshow" alt="home1" class="hero__img-home">
+                <img src="img/hero/slider-home2.png" id="slideshow" alt="home1" class="hero__img-home" style="display: none;">
+                <img src="img/hero/slider-home3.png" id="slideshow" alt="home1" class="hero__img-home" style="display: none;">
+                <img src="img/hero/slider-home4.png" id="slideshow" alt="home1" class="hero__img-home" style="display: none;">
+                <img src="img/hero/slider-home5.png" id="slideshow" alt="home1" class="hero__img-home" style="display: none;">
+                <div class="hero__contant">
+                    <div class="container">
+                        <div class="hero__information">
+                            <div class="hero__title">
+                                Отдыхайте с нами
                             </div>
-                            <div class="hero__btn">
-                                <a href="#offer-home"><button class="btn">посмотреть дома</button></a>
+                            <div class="hero__info">
+                                <div class="hero__offers">
+                                    <div class="hero__offer__block">
+                                        <div class="hero__offer">
+                                            <img src="./img/hero/icon1.png" alt="" class="hero__icon">
+                                            <div class="hero__offer-title">Провести время с семьей</div>
+                                        </div>
+                                        <div class="hero__offer">
+                                            <img src="./img/hero/icon3.png" alt="" class="hero__icon">
+                                            <div class="hero__offer-title">Отдых на природе</div>
+                                        </div>
+                                    </div>
+                                    <div class="hero__line">
+                                    </div>
+                                    <div class="hero__offer__block">
+                                        <div class="hero__offer">
+                                            <img src="./img/hero/icon2.png" alt="" class="hero__icon">
+                                            <div class="hero__offer-title">Русская баня</div>
+                                        </div>
+                                        <div class="hero__offer">
+                                            <img src="./img/hero/icon4.png" alt="" class="hero__icon">
+                                            <div class="hero__offer-title">Высокоскоростной <span
+                                                    class="hero__offer-title_decoration">WI-FI</span></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="hero__btn">
+                                    <a href="#offer-home"><button class="btn">посмотреть дома</button></a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
             </div>
         </div>
@@ -153,7 +154,7 @@
                                 <li class="info-home__item">Площадь дома: 390 м<sup>2</sup></li>
                                 <li class="info-home__item">Площадь участка: 12 сот.</li>
                                 <li class="info-home__item">Этажей в доме: 3</li>
-                                <li class="info-home__item">Для отдыха: баня или сауна</li>
+                                <li class="info-home__item">Для отдыха: баня</li>
                             </ul>
                         </div>
                         <div class="offer-home__data">
@@ -177,7 +178,7 @@
                                 <li class="info-home__item">Площадь дома: 210 м<sup>2</sup></li>
                                 <li class="info-home__item">Площадь участка: 6 сот.</li>
                                 <li class="info-home__item">Этажей в доме: 2</li>
-                                <li class="info-home__item">Для отдыха: баня или сауна</li>
+                                <li class="info-home__item">Для отдыха: баня</li>
                             </ul>
                         </div>
                         <div class="offer-home__data">
@@ -196,7 +197,7 @@
                                 <li class="info-home__item">Площадь дома: 200 м<sup>2</sup></li>
                                 <li class="info-home__item">Площадь участка: 4 сот.</li>
                                 <li class="info-home__item">Этажей в доме: 2    </li>
-                                <li class="info-home__item">Для отдыха: баня или сауна</li>
+                                <li class="info-home__item">Для отдыха: баня</li>
                             </ul>
                         </div>
                         <div class="offer-home__data">
@@ -215,7 +216,7 @@
                                 <li class="info-home__item">Площадь дома: 40 м<sup>2</sup></li>
                                 <li class="info-home__item">Площадь участка: 1 сот.</li>
                                 <li class="info-home__item">Этажей в доме: 1</li>
-                                <li class="info-home__item">Для отдыха: баня или сауна</li>
+                                <li class="info-home__item">Для отдыха: баня</li>
                             </ul>
                         </div>
                         <div class="offer-home__data">
@@ -254,7 +255,7 @@
                                 <li class="info-home__item">Площадь дома: 150 м<sup>2</sup></li>
                                 <li class="info-home__item">Площадь участка: 2 сот.</li>
                                 <li class="info-home__item">Этажей в доме: 2</li>
-                                <li class="info-home__item">Для отдыха: баня или сауна</li>
+                                <li class="info-home__item">Для отдыха: баня</li>
                             </ul>
                         </div>
                         <div class="offer-home__data">
@@ -274,7 +275,7 @@
                                 <li class="info-home__item">Площадь дома: 155 м<sup>2</sup></li>
                                 <li class="info-home__item">Площадь участка: 2 сот.</li>
                                 <li class="info-home__item">Этажей в доме: 2</li>
-                                <li class="info-home__item">Для отдыха: баня или сауна</li>
+                                <li class="info-home__item">Для отдыха: баня</li>
                             </ul>
                         </div>
                         <div class="offer-home__data">
