--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <body class="wrapper">
+    <div class="wrapper">
         <div class="menu-data">
             <div class="menu-data__line"></div>
             <div class="container">
