--- a/home4.html
+++ b/home4.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/img/header/icon.png">
     <title>Дом 40 м² на участке 1 сот.</title>
     <link rel="stylesheet" href="style/main.css">
 </head>
@@ -77,7 +78,7 @@
                             <li class="info-home__item">Площадь участка: 1 сот.</li>
                             <li class="info-home__item">Этажей в доме: 1</li>
                             <li class="info-home__item">Санузел: в доме</li>
-                            <li class="info-home__item">Для отдыха: баня или сауна</li>
+                            <li class="info-home__item">Для отдыха: баня</li>
                             <li class="info-home__item">Техника: кондиционер, холодильник, плита, микроволновка,
                                 стиральная машина, водонагреватель, телевизор, фен, утюг</li>
                             <li class="info-home__item">Интернет и ТВ: Wi-Fi, телевидение</li>
