--- a/home1.html
+++ b/home1.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/img/header/icon.png">
     <title>Коттедж 390 м² на участке 12 сот.</title>
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="/style/normalize.css">
+    <link rel="stylesheet" href="/style/main.css">
 </head>
 
 <body>
@@ -76,17 +78,17 @@
                             <li class="info-home__item">Площадь дома: 390 м<sup>2</sup></li>
                             <li class="info-home__item">Площадь участка: 12 сот.</li>
                             <li class="info-home__item">Этажей в доме: 3</li>
-                            <li class="info-home__item">Для отдыха: баня или сауна</li>
+                            <li class="info-home__item">Для отдыха: баня</li>
                             <li class="info-home__item">Санузел: в доме</li>
                             <li class="info-home__item">Коммуникации: электричество, газ, отопление, канализация</li>
                             <li class="info-home__item">Техника: кондиционер, холодильник, плита, микроволновка,
-                                посудомоечная машина, телевизор</li>
+                                посудомоечная машина, телевизор, проектор с экраном</li>
                             <li class="info-home__item">Интернет и ТВ: Wi-Fi, телевидение</li>
                             <li class="info-home__item">Парковка: парковочное место</li>
                             <li class="info-home__item">Транспортная доступность: асфальтированная дорога, остановка
                                 общественного транспорта</li>
                             <li class="info-home__item">Инфраструктура: магазин, аптека</li>
-                            <li class="info-home__item">Залог: 5000 ₽</li>
+                            <li class="info-home__item">Залог: от 5000 ₽</li>
                         </ul>
                     </div>
                 </div>
