--- a/home2.html
+++ b/home2.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/img/header/icon.png">
     <title>Коттедж 210 м² на участке 6 сот.</title>
     <link rel="stylesheet" href="style/main.css">
 </head>
@@ -76,7 +77,7 @@
                             <li class="info-home__item">Площадь дома: 210 м<sup>2</sup></li>
                             <li class="info-home__item">Площадь участка: 6 сот.</li>
                             <li class="info-home__item">Этажей в доме: 2</li>
-                            <li class="info-home__item">Для отдыха: баня или сауна</li>
+                            <li class="info-home__item">Для отдыха: баня</li>
                             <li class="info-home__item">Техника: кондиционер, холодильник, плита, микроволновка, стиральная машина, водонагреватель, телевизор, фен, утюг</li>
                             <li class="info-home__item">Интернет и ТВ: Wi-Fi, телевидение</li>
                             <li class="info-home__item">Парковка: парковочное место</li>
