--- a/home6.html
+++ b/home6.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/img/header/icon.png">
     <title>Коттедж 155 м² на участке 2 сот.</title>
     <link rel="stylesheet" href="style/main.css">
 </head>
