--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/img/header/icon.png">
     <title>ВЕРХНИЙ ДОМ</title>
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="./style/normalize.css">
+    <link rel="stylesheet" href="./style/main.css">
 </head>
 
 <body>
